--- a/main.html
+++ b/main.html
@@ -159,16 +159,38 @@
           renderer.render(scene, camera);
 
           // Capture the camera image data
-          if (session.updateRenderState) {
-            const layer = session.renderState.baseLayer;
-            const gl = layer.context;
-            const width = layer.viewport.width;
-            const height = layer.viewport.height;
-            imageData = new Uint8Array(width * height * 4);
-            
-            gl.bindFramebuffer(gl.FRAMEBUFFER, layer.framebuffer);
-            gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, imageData);
-          }
+// Capture the camera image data
+if (session.updateRenderState) {
+  const layer = session.renderState.baseLayer;
+  const gl = layer.context;
+  const width = layer.viewport.width;
+  const height = layer.viewport.height;
+  const imageData = new Uint8Array(width * height * 4);
+  
+  gl.bindFramebuffer(gl.FRAMEBUFFER, layer.framebuffer);
+  gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, imageData);
+
+  // Создаем Canvas и получаем его контекст
+  const canvas = document.createElement('canvas');
+  canvas.width = width;
+  canvas.height = height;
+  const ctx = canvas.getContext('2d');
+
+  // Создаем ImageData объект и рисуем его на Canvas
+  const data = new ImageData(new Uint8ClampedArray(imageData), width, height);
+  ctx.putImageData(data, 0, 0);
+
+  // Преобразуем Canvas в Data URL
+  const dataURL = canvas.toDataURL('image/png');
+
+  // Создаем ссылку для скачивания
+  const link = document.createElement('a');
+  link.href = dataURL;
+  link.download = 'image.png'; // Имя файла для скачивания
+  document.body.appendChild(link);
+  link.click(); // Инициируем скачивание
+  document.body.removeChild(link); // Удаляем ссылку из документа
+}
         }
       };
 
