--- a/main.html
+++ b/main.html
@@ -130,7 +130,7 @@
           }
 
           if (view.camera) {
-            cameraTexture = binding.getCameraImage(view.camera);
+           // cameraTexture = binding.getCameraImage(view.camera);
           }
 
           renderer.render(scene, camera);
