--- a/main.html
+++ b/main.html
@@ -120,6 +120,7 @@
         if (pose) {
           const view = pose.views[0];
           const viewport = session.renderState.baseLayer.getViewport(view);
+          const cameraTexture = binding.getCameraImage(view.camera);
           renderer.setSize(viewport.width, viewport.height);
 
           camera.matrix.fromArray(view.transform.matrix);
