--- a/main.html
+++ b/main.html
@@ -122,7 +122,7 @@
         if (pose) {
           const view = pose.views[0];
           const viewport = session.renderState.baseLayer.getViewport(view);
-          cameraTexture = binding.getCameraImage(view.camera);
+          //cameraTexture = binding.getCameraImage(view.camera);
           renderer.setSize(viewport.width, viewport.height);
 
           camera.matrix.fromArray(view.transform.matrix);
