--- a/main.html
+++ b/main.html
@@ -120,6 +120,12 @@
         // Get the viewer pose and update camera
         const pose = frame.getViewerPose(referenceSpace);
         if (pose) {
+          for (const view of pose.views) {
+  if (view.camera) {
+    cameraTexture = binding.getCameraImage(view.camera);
+  }
+          }
+            
           const view = pose.views[0];
           const viewport = session.renderState.baseLayer.getViewport(view);
           //cameraTexture = binding.getCameraImage(view.camera);
